# lua2cpp

./: .gitignore  BUGFIX_PROGRESS.md  CODE_REVIEW_FIXES.md  CPP_MIGRATION_SUMMARY.md  CPP_TESTS_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  MIGRATION_NOTES.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PHASE_1_2_COMPLETE.md  PHASE_3_4_COMPLETE.md  README.md  REFACTOR_PLAN.md  TRANSPILER_IMPROVEMENT_PLAN.md  benchmark_runtime.py  debug_expr_types.py  debug_types.py  generate_cpp_tests.py  pyproject.toml  qt_test_main.cpp  qt_test_module.cpp  qt_test_module.hpp  qt_test_state.hpp  sieve_main.cpp  sieve_module.cpp  sieve_module.hpp  sieve_state.hpp  simple_fixed_test  spectral_norm_main.cpp  spectral_norm_module.cpp  spectral_norm_module.hpp  spectral_norm_state.hpp  state.h  test.py  test_array.lua  test_card_generation.py  test_if_structure.py  test_no_header_main.cpp  test_no_header_module.cpp  (+7 more)
.opencode/plans/: cpp_migration.md  lua2c_transpiler.md
benchmarks/: CMakeLists.txt  RESULTS.md  benchmark_main.cpp.in  spectral_norm_standalone.cpp
benchmarks/lua/: dense_array.lua  hash_keys.lua  iteration.lua  mixed_ops.lua  sparse_array.lua
lua2c/: __init__.py
lua2c/analyzers/: __init__.py  function_registry.py  propagation_logger.py  type_inference.py  type_validator.py
lua2c/cli/: main.py
lua2c/core/: __init__.py  ast_annotation.py  ast_visitor.py  context.py  global_type_registry.py  optimization_logger.py  scope.py  symbol_table.py  type_conversion.py  type_system.py
lua2c/generators/: __init__.py  cpp_emitter.py  decl_generator.py  expr_generator.py  header_generator.py  main_generator.py  naming.py  project_state_generator.py  stmt_generator.py  string_pool.py
lua2c/generators/call_generation/: __init__.py  context.py  strategies.py  type_queries.py
lua2c/module_system/: __init__.py  dependency_resolver.py
lua2cpp/: __init__.py  fannkuch-redux.cpp  fannkuch-redux.hpp  mandel.cpp  mandel.hpp  pyproject.toml
lua2cpp/analyzers/: function_registry.py  type_resolver.py
lua2cpp/cli/: __init__.py
lua2cpp/core/: __init__.py  scope.py  types.py
lua2cpp/generators/: class_generator.py  cpp_emitter.py  expr_generator.py  stmt_generator.py
lua2cpp/lua2cpp/analyzers/: function_registry.py  type_resolver.py  y_combinator_detector.py
lua2cpp/lua2cpp/cli/: main.py
lua2cpp/lua2cpp/core/: __init__.py  ast_visitor.py  call_convention.py  library_call_collector.py  library_registry.py  scope.py  symbol_table.py  types.py
lua2cpp/lua2cpp/generators/: __init__.py  class_generator.py  cpp_emitter.py  expr_generator.py  header_generator.py  stmt_generator.py
lua2cpp/tests/: test_integration.py  test_setup.py  test_type_resolver.py  test_types.py
lua2cpp/tests/core/: test_library_call_collector.py  test_library_registry.py
lua2cpp/tests/generators/: test_header_generator.py  test_param_refix.py
output/runtime/: l2c_runtime_lua_table.hpp  lua_table.hpp
runtime/: l2c_runtime.hpp  lua_array.cpp  lua_array.hpp  lua_state.cpp  lua_state.hpp  lua_table.cpp  lua_table.hpp  lua_value.cpp  lua_value.hpp
scripts/: compare_output.py  fix_lua_semantics.py
tests/: simple.lua  test_type_helpers.cpp  test_type_helpers_print.cpp
tests/analyzers/: test_interprocedural_type_inference.py  test_type_validator.py
tests/cli/: test_main.py
tests/core/: test_ast_visitor.py  test_context.py  test_scope.py  test_symbol_table.py
tests/cpp/: .gitignore  CMakeLists.txt  NOT_FIXABLE.md  PROGRESS.md  README.md  TESTS.md  ack_main.cpp  binary_trees_main.cpp  comparisons_main.cpp  fannkuch_redux_main.cpp  fasta_main.cpp  fixpoint_fact_main.cpp  heapsort_main.cpp  heapsort_simple_main.cpp  k_nucleotide_main.cpp  main.cpp  mandel_main.cpp  mandel_standalone.cpp  mandel_table_test.cpp  n_body_main.cpp  n_body_simple_main.cpp  qt_main.cpp  queen_main.cpp  regex_dna_main.cpp  scimark_main.cpp  sieve_main.cpp  simple_main.cpp  simple_main_new.cpp  spectral_norm_main.cpp  spectral_norm_simple_main.cpp  spectralnorm_main.cpp  string_format_test.cpp  test_array_main.cpp  test_assign_main.cpp  test_combined_nil_concat_main.cpp  test_compile.cpp  test_concat_basic_main.cpp  test_concat_chain_main.cpp  test_concat_in_call_main.cpp  test_convention_flat_main.cpp  (+11 more)
tests/cpp/lua/: comparisons.lua  test_assign.lua  test_combined_nil_concat.lua  test_concat_basic.lua  test_concat_chain.lua  test_concat_in_call.lua  test_convention_flat.lua  test_convention_flat_nested.lua  test_convention_namespace.lua  test_convention_table.lua  test_func.lua  test_modop_basic.lua  test_modop_in_expr.lua  test_nil_basic.lua  test_nil_table.lua  test_type_inference.lua  test_ulnotop_basic.lua  test_ulnotop_in_call.lua
tests/cpp/runtime/: globals.hpp  l2c_runtime.cpp  l2c_runtime.hpp  l2c_runtime_lua_table.hpp  l2c_runtime_v2.cpp  l2c_runtime_v2.hpp  love_mock.hpp  lua_closure.hpp  lua_table.hpp  object.hpp
tests/cpp/stub/: l2c_runtime.hpp  minimal_types.hpp
tests/cpp/templates/: test_main.cpp.in
tests/generators/: test_expr_generator.py  test_expr_generator_call.py  test_naming.py  test_stmt_generator.py  test_string_pool.py
tests/generators/call_generation/: test_call_generation_context.py  test_type_query_service.py
tests/integration/: test_benchmarks.py  test_lua_cpp_comparison.py  test_projects.py  test_spectralnorm_comparison.py
tests/python/: test_ast_visitor.py  test_function_registry.py  test_integration.py  test_library_aliases.py  test_scope.py  test_setup.py  test_symbol_table.py
tests/python/generators/: test_arg_detection.py  test_header_generator.py  test_param_refix.py
tests/python/integration/: test_lua_files.py
tests/unit/: test_array_truthiness_fix.py  test_header_generator.py  test_local_function_recursive_calls.py  test_main_generator.py  test_module_mode_generators.py  test_project_state_generator.py
