[project]
name = "lua2c"
version = "0.1.0"
description = "Lua 5.4 to C transpiler"
requires-python = ">=3.10"
dependencies = [
    "luaparser>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "black>=26.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lua2c", "lua2c.core", "lua2c.generators", "lua2c.module_system", "lua2c.cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=lua2c --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
