[project]
name = "lua2cpp"
version = "0.1.0"
description = "Lua 5.4 to C++ transpiler - Type Resolution System"
requires-python = ">=3.10"
dependencies = [
    "luaparser>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
]

[project.scripts]
lua2cpp = "lua2cpp.cli.main:main"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["lua2cpp*"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=lua2cpp --cov-report=term-missing"
pythonpath = ["."]
